--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,6 +4,8 @@
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
 
+.SidePane .loader { position:absolute !important;margin-left:50%;margin-top:30px;}
+.datatypesLoader { left:0px !important;top:0 !important;}
 
 .App {
   text-align: center;
