--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,6 +7,8 @@
 .SidePane .loader { position:absolute !important;margin-left:50%;margin-top:30px;}
 .datatypesLoader { left:0px !important;top:0 !important;}
 
+.SearchPane > div {display:flex;justify-content: center}
+.SearchPane .formControl { margin-top:50px; margin-left:25px; width:150px;}
 .SearchPane a {text-decoration:none}
 
 .App {
