--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,12 +4,16 @@
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
 
-.SidePane .loader { position:absolute !important;margin-left:50%;margin-top:30px;}
+.SidePane .loader { position:absolute !important;margin-left:50%;margin-top:24px;}
 .datatypesLoader { left:0px !important;top:0 !important;}
 
 .SearchPane > div {display:flex;justify-content: center}
 .SearchPane .formControl { margin-top:50px; margin-left:25px; width:150px;}
 .SearchPane a {text-decoration:none}
+
+.collapse.open { margin-bottom:30px; }
+
+.checkbox.disabled { opacity:0.5; }
 
 .App {
   text-align: center;
