--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,5 @@
 /* CSS debug mode */
-/* * {background-color:rgba(255,0,128,0.1);} */
+* {background-color:rgba(255,0,128,0.1);}
 
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
