--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,11 +1,11 @@
 /* CSS debug mode */
-* {background-color:rgba(255,0,128,0.1);}
+/* * {background-color:rgba(255,0,128,0.1);} */
 
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
 
 .SidePane .loader { position:absolute !important;margin-left:50%;margin-top:24px;}
-.datatypesLoader { left:0px !important;top:0 !important;}
+.datatypesLoader, .facetLoader { left:0px !important;top:0 !important;}
 
 .SearchPane > div {display:flex;justify-content: center}
 .SearchPane .formControl { margin-top:50px; margin-left:25px; width:150px;}
