--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,7 +4,7 @@
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
 
-.SidePane .loader { position:absolute !important;margin-left:50%;margin-top:24px;}
+.SidePane .loader { position:absolute !important;margin-right:32px;margin-top:24px;right:0;}
 .datatypesLoader, .facetLoader { left:0px !important;top:0 !important;}
 
 .SearchPane > div {display:flex;justify-content: center}
