--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,21 @@
 /* CSS debug mode */
 /* * {background-color:rgba(255,0,128,0.1);} */
 
+a.result { padding:0;margin-bottom:0;width:100%; }
+a.result button { text-transform:none; padding-bottom:0;}
+a.result + div { margin-top:0;padding:0px 0 0px 16px ; margin-left:48px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
+   /* box-shadow:-5px 0 5px -4px rgba(0,0,0,0.2);  } */
+a.result + div span { display:inline ; line-height:1.2rem; }
+a.result + div span.label { text-transform:capitalize; font-weight:800; float:left;clear:both; flex-shrink:0; }
+a.result + div span:not(.label) {  }
+.match { display:flex; margin-bottom:5px }
+
+h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
+
 .resource { width:100% ; padding:50px 100px; text-align:left;}
 .resource .data { text-align:left }
 .resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:16px; font-weight:normal; }
-.resource h3 span { text-decoration: underline; font-weight:600;  text-transform:capitalize }
+.resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize }
 
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
@@ -19,6 +30,10 @@
 .collapse.open { margin-bottom:30px; }
 
 .checkbox.disabled { opacity:0.5; }
+
+/* h3 span.highlight,  */
+div.match span.highlight { border:2px solid rgba(229, 74, 53,1);padding:0px 2px ;border-radius:20px; }
+   /* background-color: rgba(229, 74, 53,1); color:white;} */
 
 .App {
   text-align: center;
