--- a/src/components/App.css
+++ b/src/components/App.css
@@ -12,8 +12,9 @@ a.result + div span:not(.label) {  }
 
 h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 
-.resource { width:100% ; padding:50px 100px; text-align:left;}
+.resource { width:100% ; padding:50px 100px; text-align:left; box-sizing: border-box;}
 .resource .data { text-align:left }
+.resource .data > div { display:flex;align-items:baseline;}
 .resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:16px; font-weight:normal; }
 .resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize }
 
