--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,12 +1,17 @@
+
+/* @import url('https://fonts.googleapis.com/css?family=Lato:400,600,700,800'); */
+
+
 /* CSS debug mode */
 /* * {background-color:rgba(255,0,128,0.1);} */
+
 
 a.result { padding:0;margin-bottom:0;width:100%; }
 a.result button { text-transform:none; padding-bottom:0;}
 a.result + div { margin-top:0;padding:0px 0 0px 16px ; margin-left:48px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
    /* box-shadow:-5px 0 5px -4px rgba(0,0,0,0.2);  } */
 a.result + div span { display:inline ; line-height:1.2rem; }
-a.result + div span.label { text-transform:capitalize; font-weight:800; float:left;clear:both; flex-shrink:0; }
+a.result + div span.label { text-transform:capitalize; font-weight:700; float:left;clear:both; flex-shrink:0; }
 a.result + div span:not(.label) {  }
 .match { display:flex; margin-bottom:5px }
 
@@ -14,9 +19,21 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 
 .resource { width:100% ; padding:50px 100px; text-align:left; box-sizing: border-box;}
 .resource .data { text-align:left }
-.resource .data > div { display:flex;align-items:baseline;}
-.resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:16px; font-weight:normal; }
-.resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize }
+.resource .data > div { display:flex;align-items:baseline;flex-wrap:wrap;box-sizing: border-box;width:100%;}
+.resource .data > div.parent { flex-wrap:wrap; }
+.resource .data > div.parent > h3 { flex-shrink:0 }
+.resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:16px; font-weight:normal; margin-right:5px; line-height:18px;}
+.resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize; }
+.resource .sub { width:100%; padding-left:30px;display:flex;flex-wrap:wrap; box-sizing: border-box;}
+.resource .sub h4.first { font-size:0.9em;font-style:italic; text-transform:capitalize; flex-shrink:0; }
+.resource .sub h4.first.prop { font-style:normal;font-size:0.8em; }
+.resource .subsub { width:100%; padding-left:30px; display: flex;align-items: baseline;flex-wrap:nowrap;position:relative; box-sizing: border-box;}
+/* .resource .subsub h4 { flex-shrink:0 ; } */
+.resource .subsub:first-child:before { content:"•";position:absolute; width:10px;margin-left:-10px;top:11px; }
+.resource .subsub:first-child { margin-top:10px; }
+.resource h3 + .sub .subsub:first-child { margin-top:0px; }
+.resource .subsub h4:not(.first):not(:last-child):after,
+.resource h4:not(:last-child):not(.first):after { content:","; pointer-events:none; }
 
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
@@ -32,9 +49,10 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 
 .checkbox.disabled { opacity:0.5; }
 
-/* h3 span.highlight,  */
-div.match span.highlight { border:2px solid rgba(229, 74, 53,1);padding:0px 2px ;border-radius:20px; }
-   /* background-color: rgba(229, 74, 53,1); color:white;} */
+h3 span.highlight,
+div.match span.highlight { border:1px solid rgba(229, 74, 53,1); padding:0px 4px ; background-color:rgba(229, 74, 53,0.15); border-radius:15px; }
+/* div.match span.highlight { background-color: rgba(229, 74, 53,1.0); color:white ; padding:0px 2px ;}  */
+
 
 .App {
   text-align: center;
