--- a/src/components/App.css
+++ b/src/components/App.css
@@ -35,6 +35,8 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .subsub h4:not(.first):not(:last-child):after,
 .resource h4:not(:last-child):not(.first):after { content:","; pointer-events:none; }
 
+.goBack { text-decoration: none; }
+
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
 
