--- a/src/components/App.css
+++ b/src/components/App.css
@@ -40,6 +40,7 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
 
+/* .SidePane > div { position:fixed } */
 .SidePane .loader { position:absolute !important;margin-right:32px;margin-top:24px;right:0;}
 .datatypesLoader, .facetLoader { left:0px !important;top:0 !important;}
 
