--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,10 +5,11 @@
 /* CSS debug mode */
 /* * {background-color:rgba(255,0,128,0.1);} */
 
-
 a.result { padding:0;margin-bottom:0;width:100%; }
 a.result button { text-transform:none; padding-bottom:0;}
-a.result + div { margin-top:0;padding:0px 0 0px 16px ; margin-left:48px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
+a.result + div { margin-top:-20px!important;padding:20px 0 0px 35px ; margin-left:41px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
+a.result + div:empty { margin-bottom:8px; margin-top:0 !important;padding-top:0 !important;}
+
    /* box-shadow:-5px 0 5px -4px rgba(0,0,0,0.2);  } */
 a.result + div span { display:inline ; line-height:1.2rem; }
 a.result + div span.label { text-transform:capitalize; font-weight:700; float:left;clear:both; flex-shrink:0; }
