--- a/src/components/App.css
+++ b/src/components/App.css
@@ -34,7 +34,9 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .subsub:first-child { margin-top:10px; }
 .resource h3 + .sub .subsub:first-child { margin-top:0px; }
 .resource .subsub h4:not(.first):not(:last-child):after,
-.resource h4:not(:last-child):not(.first):after { content:","; pointer-events:none; }
+.resource h4:not(:last-child):not(.first):not(.last):after { content:" | "; pointer-events:none; }
+
+.person #person, .place #place { display:none;}
 
 .resource .data a { text-decoration: none; color:rgba(229, 74, 53,1);}
 .resource .data a:hover { border-bottom:1px solid rgba(229, 74, 53,1); }
