--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 
 
 /* CSS debug mode */
-/* * {background-color:rgba(255,0,128,0.1);} */
+* {background-color:rgba(255,0,128,0.05);}
 
 a.result { padding:0;margin-bottom:0;width:100%; }
 a.result button { text-transform:none; padding-bottom:0;}
@@ -30,7 +30,11 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .sub h4.first.prop { font-style:normal;font-size:0.8em; }
 .resource .subsub { width:100%; padding-left:30px; display: flex;align-items: baseline;flex-wrap:nowrap;position:relative; box-sizing: border-box;}
 /* .resource .subsub h4 { flex-shrink:0 ; } */
-.resource .subsub:first-child:before { content:"•";position:absolute; width:10px;margin-left:-10px;top:11px; }
+
+.resource .subsub:first-child:before,
+.resource .sub .noVal
+{ content:"•";position:absolute; width:10px;margin-left:-10px;top:11px; }
+
 .resource .subsub:first-child { margin-top:10px; }
 .resource .subsub.full { flex-wrap:wrap; }
 .resource .subsub.full > h4.first { width:100%; }
@@ -45,7 +49,8 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .data a { text-decoration: none; color:rgba(229, 74, 53,1);}
 .resource .data a:hover { border-bottom:1px solid rgba(229, 74, 53,1); }
 
-.goBack { text-decoration: none; }
+.goBack { text-decoration: none;  }
+.goBack button { min-width:0 !important; }
 
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
