--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,6 +7,7 @@
 
 a.result { padding:0;margin-bottom:0;width:100%; }
 a.result button { text-transform:none; padding-bottom:0;}
+/* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
 a.result + div { margin-top:-20px!important;padding:20px 0 0px 35px ; margin-left:41px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
 a.result + div:empty { margin-bottom:8px; margin-top:0 !important;padding-top:0 !important;}
 
@@ -63,6 +64,8 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .SearchPane > div {display:flex;justify-content: center}
 .SearchPane .formControl { margin-top:50px; margin-left:25px; width:150px;}
 .SearchPane a {text-decoration:none}
+
+.SearchPane h5 { margin-left:16px; font-size : 16px; margin-bottom:16px; }
 
 .collapse.open { margin-bottom:30px; }
 
