--- a/src/components/App.css
+++ b/src/components/App.css
@@ -80,6 +80,9 @@ div.match div.multi > span:not(:last-child)::after { content:", "; }
 
 #UView { width:800px;height:480px;border:none; overflow:visible; }
 
+.uv.toggled:not(.hide) iframe { z-index:10 !important;position:fixed !important;width:100% !important;left:0 !important;height:calc(100vh) !important;top:0 !important;  } */ */ */ */
+.uv.hide { display:none !important;}
+
 .uvDefault { box-shadow: 0 0 10px black;display:inline-block;padding:5px;background:rgba(0,0,0,1.0);position:relative; min-width:100px;min-height:100px; }
 .uvDefault img {max-width:100%; position:relative;z-index:1;}
 .uvDefault.loaded { font-size:0; cursor:pointer; }
