added support for filtering workIsAbout facet using topic tree

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -60,7 +60,7 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .goBack:not(:first-child):not(.noML) { margin-left:35px !important; }
 .goBack button { min-width:0 !important;margin-left:0 !important; }
 
-#iiif { margin-left:0 !important;padding:0;min-width:0; margin-right:20px;}
+#iiif { padding:0;min-width:0;}
 #iiif img { margin-left:0;width:28px;}
 
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
