--- a/src/components/App.css
+++ b/src/components/App.css
@@ -46,6 +46,9 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .subsubsub h4.first.prop { font-size:0.7em;font-style:italic; }
 .resource .subsubsub .subsubsub h4.first.prop { font-style:normal; }
 
+div[role="tooltip"] { margin-left:30px; font-size:16px; }
+div[role="tooltip"] span { font-weight:bold; }
+
 .person #person, .place #place { display:none;}
 
 .match .multi a,
