--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,7 +5,7 @@
 /* CSS debug mode */
 /* * {background-color:rgba(255,0,128,0.05);} */
 
-a.result { padding:0;margin-bottom:0;width:100%; }
+a.result { padding:0;margin-bottom:0;width:100%;display: inline-block;}
 a.result button { text-transform:none; padding-bottom:0;}
 /* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
 a.result + div { margin-top:-20px!important;padding:20px 0 0px 35px ; margin-left:41px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
