--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,10 +3,10 @@
 
 
 /* CSS debug mode */
-* {background-color:rgba(255,0,128,0.05);}
+/* * {background-color:rgba(255,0,128,0.05);} */
 
 #pagine { width:100%;display:flex;padding:20px;justify-content: space-between; box-sizing:border-box}
-#pagine svg {height:36px;width:36px;}
+#pagine svg {height:36px;width:36px; cursor:pointer;}
 
 a.result { padding:0;margin-bottom:0;width:100%;display: inline-block;}
 a.result button { text-transform:none; padding-bottom:0;}
@@ -105,6 +105,8 @@ div.match div.multi > span:not(:last-child)::after { content:", "; }
 
 #fondUV:not(.hide) { position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.5); left:0;top:0;z-index:10; }
 #fondUV.hide * { display:none !important; }
+
+svg.hide { opacity:0;pointer-events:none; }
 
 .uv.toggled:not(.hide) iframe { z-index:10 !important;position:fixed !important;width:100% !important;left:0 !important;height:calc(100vh) !important;top:0 !important;  } */ */ */ */
 .uv.hide { display:none !important;}
