--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,7 @@
 #pagine { width:100%;display:flex;padding:20px;justify-content: space-between; box-sizing:border-box}
 #pagine svg {height:36px;width:36px; cursor:pointer;}
 
-a.result { padding:0;margin-bottom:0;width:100%;display: inline-block;}
+a.result { padding:0;margin-bottom:0;width:100%;display: inline-block;margin-top:10px;}
 a.result button { text-transform:none; padding-bottom:0;}
 /* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
 a.result + div { margin-top:-20px!important;padding:20px 0 0px 35px ; margin-left:41px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
