--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 
 
 /* CSS debug mode */
-* {background-color:rgba(255,0,128,0.05);}
+/* * {background-color:rgba(255,0,128,0.05);} */
 
 #pagine { width:100%;display:flex;padding:20px;justify-content: space-between; box-sizing:border-box}
 #pagine svg {height:36px;width:36px; cursor:pointer;}
@@ -22,9 +22,11 @@ a.result + div span:not(.label) {  }
 
 a.result .lang, .match .lang,.data .lang,h2 .lang
 { font-size: 9px;display:inline-block;margin-left:5px;margin-top:7px;position:absolute; color:rgba(0,0,0,0.5);}
-.data .lang { position:relative;margin:0;line-height:0px;vertical-align:-7px;padding:0 5px;padding-top:10px;}
+.data .lang { position:relative;margin:0;vertical-align:-7px;padding:5px;line-height:0;}
 h2 .lang { margin-top:22px }
+
 h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
+/* h4 + h4 { margin-top:5px;} */
 
 .resource { width:100% ; padding:50px 100px; text-align:left; box-sizing: border-box;}
 .resource .data { text-align:left }
@@ -33,7 +35,7 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .data > div.parent > h3 { flex-shrink:0 }
 .resource h3,.resource h4 { display:inline-block; margin-bottom:0px; font-size:16px; font-weight:normal; margin-right:5px; line-height:18px;}
 .resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize; }
-.resource .sub { width:100%; padding-left:30px;display:flex;flex-wrap:wrap; box-sizing: border-box; position:relative;margin-top:10px;}
+.resource .sub { width:100%; padding-left:30px;display:flex;flex-wrap:wrap; box-sizing: border-box; position:relative;}
 .resource .sub h4.first { font-size:0.9em;font-style:italic; text-transform:capitalize; flex-shrink:0; }
 .resource .sub h4.first.prop { font-style:normal;font-size:0.8em; }
 .resource .subsub { width:100%; padding-left:30px; display: flex;align-items: baseline;flex-wrap:nowrap;position:relative; box-sizing: border-box;}
