--- a/src/components/App.css
+++ b/src/components/App.css
@@ -26,7 +26,7 @@ a.result .lang, .match .lang,.data .lang,h2 .lang
 h2 .lang { margin-top:22px }
 
 h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
-/* h4 + h4 { margin-top:5px;} */
+/* h4 + h4 { margin-top:5px;}  */
 
 .resource { width:100% ; padding:50px 100px; text-align:left; box-sizing: border-box;}
 .resource .data { text-align:left }
@@ -53,7 +53,7 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .subsubsub { width:100%; padding-left:30px; display: flex;align-items: baseline;flex-wrap:nowrap;position:relative; box-sizing: border-box;}
 .resource .subsub.full .subsub h4.first.prop,
 .resource .subsubsub h4.first.prop { font-size:0.7em;font-style:italic; }
-.resource .subsubsub .subsubsub h4.first.prop { font-style:normal; }
+.resource .subsubsub .subsubsub h4.first.prop,.resource .subsub.full .subsubsub h4.first.prop { font-style:normal; }
 
 
 div[role="tooltip"] { margin:30px; font-size:16px; }
