--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 
 
 /* CSS debug mode */
-/* * {background-color:rgba(255,0,128,0.05);} */
+ /* * {background-color:rgba(255,0,128,0.05);} */
 
 #pagine { width:100%;display:flex;padding:20px;justify-content: space-between; box-sizing:border-box}
 #pagine svg {height:36px;width:36px; cursor:pointer;}
@@ -24,6 +24,11 @@ a.result .lang, .match .lang,.data .lang,h2 .lang
 { font-size: 9px;display:inline-block;margin-left:5px;margin-top:7px;position:absolute; color:rgba(0,0,0,0.5);}
 .data .lang { position:relative;margin:0;vertical-align:-7px;padding:5px;line-height:0;}
 h2 .lang { margin-top:22px }
+
+.data .anno span {color : rgba(229, 74, 53,1); cursor:pointer; }
+.data .anno span:hover { text-decoration:underline; }
+
+.data .faded { opacity:0.65;}
 
 h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 /* h4 + h4 { margin-top:5px;}  */
