--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,8 +11,8 @@
 a.result { padding:0;margin-bottom:0;width:100%;display: inline-block;margin-top:10px;}
 a.result button { text-transform:none; padding-bottom:0;}
 /* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
-a.result + div { margin-top:-20px!important;padding:20px 0 0px 35px ; margin-left:41px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
-a.result + div:empty { margin-bottom:8px; margin-top:0 !important;padding-top:0 !important;}
+a.result + div:not(#pagine) { margin-top:-20px!important;padding:20px 0 0px 35px ; margin-left:41px; font-size:0.9rem; margin-bottom:20px; border-left: 1px solid rgba(0,0,0,0.25) ; }
+a.result + div:not(#pagine):empty { margin-bottom:8px; margin-top:0 !important;padding-top:0 !important;}
 
    /* box-shadow:-5px 0 5px -4px rgba(0,0,0,0.2);  } */
 a.result + div span { display:inline ; line-height:1.2rem; }
@@ -110,7 +110,7 @@ body {overflow-x:hidden; }
 .SidePane .loader { position:absolute !important;margin-right:32px;margin-top:24px;right:0;}
 .datatypesLoader, .facetLoader { left:0px !important;top:0 !important;}
 
-/* .SidePane.visible + .SearchPane { padding-left:400px; } */
+
 
 .SearchPane { width:1000px; margin:auto;margin-top:10vh;max-width:90%; z-index:0;}
 .SearchPane > div {display:flex;justify-content: center;}
@@ -183,4 +183,19 @@ svg.hide { opacity:0;pointer-events:none; }
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@media (max-width:1800px)
+{
+   body { min-width:1400px; overflow:auto;}
+   .SearchPane { transition:all 400ms ease-in-out;}
+   .SidePane.visible + .SearchPane { padding-left:400px; }
+   .SidePane.visible + .SearchPane .mainloader { padding-left:200px; }
+}
+
+@media (max-width:1400px)
+{
+   body { min-width:calc(100% - 400px);}
+   .SearchPane { width: calc(100% - 400px); }
+   .SidePane:not(.visible) + .SearchPane { width:100%; }
 }
