--- a/src/components/App.css
+++ b/src/components/App.css
@@ -160,9 +160,16 @@ svg.hide { opacity:0;pointer-events:none; }
 
 .uvLoader { z-index:0 !important;}
 
-.pdfLoader { vertical-align:-1px; }
+.pdfLoader { vertical-align:-3px; }
+.pdfLoader img { opacity:0.55; }
 .pdfLoader > button { width:auto !important; }
 .pdfLoader .loader, .loadedContent { display:inline-block;pointer-events:none; }
+
+.poPdf a { cursor:pointer;}
+
+.pdfMenu a { position:relative;}
+.pdfLoading,.zipLoading { color:white; }
+.pdfSpinner,.zipSpinner { left: 55% !important;  top: 45% !important; }
 
 .App {
   text-align: center;
