--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 
 
 /* CSS debug mode */
-/* * {background-color:rgba(255,0,128,0.05);} */
+* {background-color:rgba(255,0,128,0.05);}
 
 #login { position:absolute; top:0;right:0; }
 
