--- a/src/components/App.css
+++ b/src/components/App.css
@@ -117,11 +117,12 @@ div[role="tooltip"] div { font-weight:bold;font-size:16px; }
 
 .resource .SidePane .data .anno {text-decoration:none !important;}
 .resource .SidePane .data .anno .propref { color:black; text-transform:capitalize;border-color:black; }
-.resource .SidePane .data .anno { background-color:#fdfdfd;width:100%;margin-left:0;padding-top:15px;border:1px solid #eee;border-bottom:none;border-right-color:#ccc;}
+.resource .SidePane .data .anno { background-color:#fdfdfd;width:100%;margin-left:0;padding-top:15px;border:1px solid #eee;
+   border-bottom:none;border-right-color:#ccc;padding-right:60px;}
 .resource .SidePane .data .anno:not(:first-child) { margin-top:15px; }
 .resource .SidePane .data .anno svg { position:absolute;z-index:5;color:rgba(0,0,0,0.54);cursor:pointer;margin-top:-2px;  }
 .resource .SidePane .data .anno svg:hover { color:rgba(0,0,0,0.65); }
-.resource .SidePane .data .anno hr { height:1px;border:none;background-color:rgba(0,0,0,0.25);}
+.resource .SidePane .data .anno hr { height:1px;border:none;background-color:rgba(0,0,0,0.25);width:calc(100% + 50px);float:left;}
 
 .resource .SidePane .data > .sub { padding-left:0;}/* :10px; background-color:#fdfdfd; margin-bottom:5px; }  */
 .resource .SidePane .data > .sub > .sub { padding-left:20px; background-color:#fdfdfd;border-left:1px solid #eee;border-right:1px solid #ccc;}
