--- a/src/components/App.css
+++ b/src/components/App.css
@@ -145,6 +145,13 @@ div[role="tooltip"] div { font-weight:bold;font-size:16px; }
 .resource .SidePane .data > .sub > .sub:last-child {border-bottom:1px solid #ccc;padding-bottom:15px;margin-bottom:30px;}
 .resource .SidePane .data .sub .annoticon { display:none ; }
 .resource .SidePane .data .anno { color:black; text-decoration:underline;padding-left:10px;}
+.resource .SidePane .data .subsub.new { padding-right:10px; }
+.resource .SidePane .data .subsub.new > div { margin-top:10px; }
+.resource .SidePane .data .subsub.new > div > label { font-size:14px;}
+.resource .SidePane .data .subsub.new > div > label + div::before { border-color:rgba(0,0,0,0.15); }
+.resource .SidePane .data .subsub.new > div > label + div { font-size:12px;}
+.resource .SidePane .data .anno + .sub ~ .sub { padding-top:30px;}
+/* .resource .SidePane .data .subsub.new label + div { margin-top:0; } */
 
 .goBack { text-decoration: none; }
 .goBack:not(:first-child):not(.noML) { margin-left:35px !important; }
