--- a/src/components/App.css
+++ b/src/components/App.css
@@ -168,9 +168,13 @@ div[role="tooltip"] div { font-weight:bold;font-size:16px; }
 .checkB,.checkedB { border-radius:50%; border:2px solid #666;width:20px;height:20px;display:inline-block; }
 .checkedB {}
 
+.placeMap {  width:400px;height:400px;overflow:hidden; }
+.placeMap.large { width:100%;height:90vh; }
 .leaflet-tooltip { padding:15px;}
 .leaflet-tooltip h2 {  font-size:16px; padding-bottom:0;margin:0 !important;margin-bottom:5px !important;}
 .leaflet-tooltip h2 svg { display:none;}
+.leaflet-bottom.leaflet-left .leaflet-control { margin-bottom:0 !important;margin-left:0 !important;background: rgba(255, 255, 255, 0.7); }
+.placeMap:not(.large) .leaflet-bottom.leaflet-left .leaflet-control { font-size:11px !important; }
 
 body {overflow-x:hidden; }
 
